# foundry-toolkit

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  .secretlintignore  .secretlintrc.json  CLAUDE.md  README.md  eslint.config.js  knip.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  pr-image.yml  release-image.yml  release-tagger.yml
.husky/: pre-commit
apps/character-creator/: .dockerignore  .editorconfig  .gitignore  .npmrc  CLAUDE.md  Dockerfile  NOTICE  README.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/dm-tool/: CLAUDE.md  config.example.json  electron.vite.config.ts  index.html  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
apps/foundry-api-bridge/: .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Dockerfile  PATCHES.md  README.md  dev.sh  docker-compose.dev.yml  local.sh  (+6 more)
deploy/: .env.example  Dockerfile  Dockerfile.foundry  Dockerfile.foundry-mcp  Dockerfile.player-portal  README.md  compose.override.yaml.example  compose.yaml  docker-entrypoint.sh
docs/: KNIP-CLEANUP-AUDIT-2026-05-04.md  REFACTOR-AUDIT-2026-04-30.md
scripts/: upscale-icons.test.ts  upscale-icons.ts
tagger/: CLAUDE.md  QUICKSTART.md  README.md  SEARCH_GUIDE.md  build.bat  config.example.toml  entry.py  pyproject.toml
tagger/scripts/: fetch-release.ps1  fetch-release.sh
tagger/src/dnd_map_tagger/: __init__.py  cli.py  config.py  eagle.py  index.py  mcp_server.py  pipeline.py  schema.py  vision.py
(+889 files in other folders)
